# connect-access

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  local.yml  merge_production_dotenvs_in_dotenv.py  merge_production_dotenvs_in_dotenv.sh  production.yml  staging.yml
backend/: .gitignore  Makefile  README.md  manage.py  pyproject.toml  setup.cfg  test_all.sh
backend/config/: api_router.py  celery_app.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  test.py
backend/connect_access/: __init__.py  conftest.py  fixtures.py  views.py
backend/connect_access/apps/configuration/: abstract_models.py  admin.py  api.py  apps.py  context_processors.py  models.py  serializers.py
backend/connect_access/apps/mediations/: abstract_models.py  admin.py  api.py  apps.py  choices.py  models.py  permissions.py  serializers.py
backend/connect_access/apps/users/: abstract_models.py  admin.py  apps.py  models.py  tasks.py
backend/connect_access/configuration/: admin.py  api.py  apps.py  models.py  serializers.py
backend/connect_access/configuration/migrations/: 0001_initial.py  0002_auto_20211122_1613.py  0003_aboutserviceinformation_uuid.py  0004_auto_20211122_1750.py  0005_auto_20211123_1029.py  0006_auto_20211123_1645.py  0007_auto_20220209_1431.py  0008_auto_20220210_1759.py  0009_auto_20220214_1721.py  0010_auto_20220216_1617.py  0011_auto_20220301_1752.py
backend/connect_access/configuration/tests/: factories.py  test_api.py  test_commands.py  test_models.py  test_serializers.py
backend/connect_access/contrib/sites/: __init__.py
backend/connect_access/core/: admin.py  customisation.py  exceptions.py  loading.py  tasks.py
backend/connect_access/mediations/: admin.py  api.py  apps.py  models.py  permissions.py  serializers.py
backend/connect_access/mediations/migrations/: 0001_initial.py  0002_auto_20210217_1652.py  0003_auto_20210222_1100.py  0005_auto_20210401_0929.py  0007_mediationrequest_urgent.py  0011_auto_20210423_1428.py  0012_auto_20210430_0948.py  0013_merge_20210430_1652.py  0014_add_uuid_field.py  0015_populate_uuid_values.py  0016_remove_uuid_null.py  0018_auto_20210617_1224.py  0019_mediationrequest_request_date.py  0021_change_empty_assistive_technology_values.py  0022_auto_20210730_1720.py  0023_auto_20210819_1214.py  0025_auto_20210820_1735.py  0026_auto_20210823_1725.py  0027_auto_20210831_0934.py  0028_auto_20210920_1802.py  0029_auto_20210930_1151.py
backend/connect_access/mediations/tests/: factories.py  test_api.py  test_commands.py  test_models.py  test_permissions.py  test_serializers.py  test_urls.py  utils.py
backend/connect_access/models/: __init__.py  fields.py  receivers.py  serializers.py
backend/connect_access/templates/: base.html
backend/connect_access/tests/: conftest.py  test_commands.py  test_views.py
backend/connect_access/users/: admin.py  apps.py  models.py  serializers.py
backend/connect_access/users/migrations/: 0002_auto_20201113_1534.py  0006_auto_20201115_1334.py  0007_auto_20201210_1710.py  0008_auto_20210430_0948.py  0009_add_uuid_field.py  0010_populate_uuid_values.py  0011_remove_uuid_null.py  0012_auto_20210601_1400.py
backend/connect_access/users/tests/: factories.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py
backend/connect_access/utils/: context_processors.py
backend/connect_access/utils/tests/: conftest.py  test_context_processors.py
backend/docs/: conf.py
backend/docs/_source/: howto.rst  index.rst  users.rst
backend/koenaconnect/: __init__.py  conftest.py  views.py
backend/koenaconnect/contrib/: __init__.py
backend/koenaconnect/mediations/: apps.py  permissions.py  serializers.py
backend/koenaconnect/templates/: base.html
backend/koenaconnect/tests/: test_views.py
backend/koenaconnect/users/: admin.py  apps.py  emails.py  forms.py  models.py
backend/requirements/: base.txt  code_quality.txt  local.txt  production.txt
docs/: .eslintignore  (+4 more)
(+454 files in other folders)
