[tool.poetry]
name = "django-connect-access"
version = "0.1.0"
description = ""
authors = [
  "François Ledoyen <ledoyenfrancois@gmail.com>",
]
readme = "README.md"
homepage = "https://connectaccess.org"
repository = "https://gitlab.com/koena/connect-access"
documentation = "https://connectaccess.org/docs/introduction/"
packages = [{include = "connect_access"}]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
addopts = "--reuse-db"
python_files = "tests.py test_*.py"

[tool.poetry.plugins]
pytest11 = { "connect_access" = "connect_access.tests" }

[tool.poetry.dependencies]
python = "^3.9"
pytz = "2022.1"
python-slugify = "6.1.2"
psycopg2 = "^2.9.5"
pillow = "9.1.1"
argon2-cffi = "21.3.0"
whitenoise = "6.1.0"
redis = "4.3.3"
hiredis = "2.0.0"
celery = "5.2.7"
django-celery-beat = "2.3.0"
flower = "1.0.0"
bidict = "0.22.0"
libsass = "0.21.0"
django = "4.0.8"
django-environ = "0.8.1"
django-model-utils = "4.2.0"
django-crispy-forms = "1.14.0"
django-redis = "5.2.0"
djangorestframework = "3.13.1"
django-cors-headers = "3.11.0"
django-webpack-loader = "0.7.0"
djoser = "2.1.0"
django-colorfield = "0.7.0"
django-translated-fields = "0.11.3"
django-sass-processor = "1.1"
django-compressor = "3.1"
django-solo = "2.0.0"
django-extensions = "3.1.5"
django-csp = "3.7"
drfpasswordless = "1.5.8"
django-pagedown = "2.2.1"

[tool.poetry.group.plugins]
optional = true

[tool.poetry.group.plugins.dependencies]

[tool.poetry.group.code_quality]
optional = true

[tool.poetry.group.code_quality.dependencies]
flake8 = "3.9.2"
flake8-isort = "4.1.1"
flake8-django = "1.1.2"
flake8-pytest = "1.3"
flake8-pytest-style = "1.6.0"
bandit = "1.7.4"
flake8-bandit = "3.0.0"
flake8-comprehensions = "3.10.0"
flake8-docstrings = "1.6.0"
flake8-string-format = "0.3.0"
flake8-bugbear = "22.7.1"
flake8-debugger = "4.1.2"
flake8-eradicate = "1.2.1"
flake8-broken-line = "0.4.0"
flake8-rst-docstrings = "0.2.6"
pep8-naming = "0.13.0"
darglint = "1.8.1"
mccabe = "0.6.1"
coverage = "6.4.1"
black = "22.6.0"
pylint-django = "2.5.3"
pylint-celery = "0.3"
pre-commit = "2.19.0"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "20.1.0"
sentry-sdk = "1.5.12"
django-anymail = "8.6"
django-celery-email = "3.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
werkzeug = "2.1.2"
ipdb = "0.13.9"
watchgod = "0.8.2"
mypy = "0.961"
django-stubs = "1.12.0"
djangorestframework-stubs = "1.7.0"
pytest = "7.1.2"
pytest-sugar = "0.9.4"
mock = "4.0.3"
types-python-dateutil = "2.8.18"
types-mock = "4.0.15"
factory-boy = "3.2.1"
django-debug-toolbar = "3.2.4"
django-coverage-plugin = "2.0.2"
pytest-django = "4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.distutils.bdist_wheel]
universal = true
