[metadata]
python_requires = >=3.9

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv/*
ignore =
    S101 ; use of assert detected (useless with pytest)
    D10 ; missing docstrings
    W503 ; line break before binary operator conflict with black
    DAR101 ; difficult to follow with django functions that are often art of the framework
    DAR201 ; same thing as over

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv/*

[mypy]
python_version = 3.9
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
plugins = mypy_django_plugin.main, mypy_drf_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = config.settings.test

[mypy-*.migrations.*]
# Django migrations should not produce any errors:
ignore_errors = True

[coverage:run]
include = koenaconnect/*
omit = *migrations*, *tests*
plugins =
    django_coverage_plugin
